--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -7,8 +7,7 @@
     "outDir": "./dist"
   },
   "exclude": [
-    "node_modules",
-    "dist"
+    "node_modules"
   ],
   "extends": "tsconfig/base.json",
   "include": [
