--- a/apps/frontend/turbo.json
+++ b/apps/frontend/turbo.json
@@ -5,7 +5,8 @@
   "pipeline": {
     "build": {
       "outputs": [
-        "dist/**"
+        ".next/**",
+        "!.next/cache/**"
       ]
     }
   }
