--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint",
     "test": "turbo test",
-    "typecheck": "turbo typecheck"
+    "typecheck": "turbo typecheck",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
+    "@turbo/gen": "^1.10.15",
+    "@types/jest": "^29.5.5",
     "eslint": "^8.48.0",
+    "husky": "^8.0.3",
     "jest": "^29.6.4",
     "prettier": "^2.7.1",
     "turbo": "latest"
