--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -12,7 +12,9 @@
     "watch": "tsup --watch",
     "lint": "eslint src/",
     "typecheck": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "jest": {
     "preset": "jest-presets/jest/node"
@@ -24,5 +26,9 @@
     "tsconfig": "workspace:*",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "pino": "^8.15.6",
+    "pino-pretty": "^10.2.3"
   }
 }
